updating deployment link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/xiomaraR/reactapp",
+  "homepage": "https://xiomarar.github.io/reactapp",
   "name": "week5design2react",
   "version": "0.1.0",
   "private": true,
